Update java-galaxy-wars-post.md